AR/VR times page

--- a/VR-Times.html
+++ b/VR-Times.html
@@ -32,7 +32,7 @@
 
 <body>
     <!-- header -->
-    <header class="header">
+    <header>
         <div class="navbar mt-6">
             <div class="flex justify-evenly items-center text-xl">
                 <!-- Logo -->
@@ -93,8 +93,8 @@
     </header>
     <!-- main -->
     <main>
-         <!-- banner -->
-         <div class="sub-banner relative bg-center bg-top bg-cover bg-no-repeat p-40">
+        <!-- banner -->
+        <div class="sub-banner relative bg-center bg-top bg-cover bg-no-repeat p-40">
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center ">
                     <h1 class="font-2 text-7xl leading-normal mt-20">
@@ -103,8 +103,200 @@
                 </div>
             </div>
         </div>
-        <div class="my-28"></div>
-        <div class="gradiant-2 relative overflow-hidden">
+        <div class="my-32"></div>
+        <div class="gradiant-2 gradiant-5 relative overflow-hidden">
+            <!-- AR/VR card -->
+            <div class="arVrCard">
+                <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
+                    <div class="w-full flex">
+                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-1.png" alt="times-1" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>8 Oct</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">Process of designing a VR<br> industrial training program</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        Designing an Impactful VR Industrial Training Program: Step-by-Step Virtual Reality
+                                        (VR)....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-1/3 choose-bg mx-20" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-3.png" alt="times-3" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>3 Oct</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">First Interview in Metaverse:<br> Zuck’s Photorealistic Codec....</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        While critics have spent the previous four years busy writing obituaries for Meta’s metaverse dream....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-4.png" alt="times-1" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>29 Oct</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">Meta Connect 2023: All event highlights you may have....</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        After a few years of waiting, Meta Connect 2023 finally reignited the excitement in the virtual reality....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full flex mt-20">
+                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-5.png" alt="times-5" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>21 Sep</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">Text Prompts into 3D World: Hiber3D To Generative....</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        Imagine living in a world where creating beautiful 3D models and animations is as simple....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-1/3 choose-bg mx-20" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-6.png" alt="times-6" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>12 Aug</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">13 Companies That Are Using VR For Training</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        VR training can provide a number of benefits for companies, including improved learning outcomes....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-7.png" alt="times-7" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>29 Oct</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">Top 7 VR industrial training applications</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        After a few years of waiting, Meta Connect 2023 finally reignited the excitement in the virtual reality....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full flex mt-20">
+                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-8.png" alt="times-8" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>5 Sep</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">How to Create 3d models using MidJourney?</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        This is definitely one of the easiest video explanations how we can have a 3d model using AI tools....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-1/3 choose-bg mx-20" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-9.png" alt="times-9" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>18 May</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">The challenges of building the metaverse.</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        The term “Metaverse” has been with us since 1992, appearing in Neal Stephenson’s novel....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-1/3 choose-bg" style="height: 600px;">
+                            <div class="relative">
+                                <img src="assets/image/times-10.png" alt="times-10" class="h-72 object-cover object-center">
+                                <div class="absolute bg-yellow-500 inline-block p-2 px-10 -bottom-5 right-5">
+                                    <span>4 May</span>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="p-10">
+                                    <h3 class="font-2 text-2xl">VR for Automotive Industry :- <br>​</h3>
+                                    <p class="pt-5 font-light text-xl text-zinc-400 tracking-wider leading-relaxed">
+                                        Virtual Reality (VR) is an innovative technology that has the potential to revolutionize the automotive industry....
+                                    </p>
+                                    <a href="VR Times blog details.html" class="pt-4 flex items-center">
+                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="my-28"></div>
             <!-- COMPANIES -->
             <div class="company">
@@ -167,19 +359,21 @@
                         </div>
                         <div class="footer-contain mt-10 ">
                             <p class="text-zinc-400 opacity-75 text-2xl leading-relaxed tracking-wide">
-                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when an<br> unknown printer took a galley.
+                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem
+                                Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when
+                                an<br> unknown printer took a galley.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="w-1/3 flex-col justify-center items-center text-center">
                     <div class="footer-title">
-                        <h4 class="font-2 text-yellow-500 uppercase font-medium text-4xl" >Reach us</h4>
+                        <h4 class="font-2 text-yellow-500 uppercase font-medium text-4xl">Reach us</h4>
                     </div>
-                    <div class="banner-border-2 pb-4"></div>   
+                    <div class="banner-border-2 pb-4"></div>
                     <div class="footer-social-icon flex justify-evenly mt-10">
                         <div class="calendly">
-                            <a href=""  class="flex flex-col items-center justify-center">
+                            <a href="" class="flex flex-col items-center justify-center">
                                 <img src="assets/image/calendly.png" alt="Calendly" class="h-20">
                                 <span class="pt-5">Book a Meeting On<br> Calendly</span>
                             </a>
@@ -193,7 +387,7 @@
                     </div>
                     <div class="footer-social-icon mt-10">
                         <div class="email">
-                            <a href=""  class="flex flex-col items-center justify-center">
+                            <a href="" class="flex flex-col items-center justify-center">
                                 <img src="assets/image/email.png" alt="email" class="h-20">
                                 <span class="pt-5">Contact<br> @twinreality.in</span>
                             </a>
@@ -204,19 +398,6 @@
             </div>
         </div>
     </footer>
-    <script>
-        const slider_1 = document.getElementById("testimontal-slider");
-        const totalSlides_1 = slider_1.children.length;
-        let currentIndex_1 = 0;
-
-        function slideNext() {
-            currentIndex_1 = (currentIndex_1 + 1) % totalSlides_1;
-            slider_1.style.transform = `translateX(-${currentIndex_1 * 100}%)`;
-        }
-
-        // Set interval for automatic sliding
-        setInterval(slideNext, 3000); // Slides change every 3 seconds
-    </script>
 </body>
 
 </html>
