--- a/home.html
+++ b/home.html
@@ -371,7 +371,7 @@
                                 Designing an Impactful VR Industrial Training<br> Program: Step-by-Step Virtual Reality
                                 (VR)....
                             </p>
-                            <a href="" class="pt-4 flex items-center">
+                            <a href="VR-Times.html" class="pt-4 flex items-center">
                                 <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
                                 <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                             </a>
@@ -386,14 +386,14 @@
                                 Illumetry, a provider of XR displays, recently<br> announced its Illumetry EOS
                                 gadget....
                             </p>
-                            <a href="" class="p-4 flex items-center">
+                            <a href="VR-Times.html" class="pt-4 flex items-center">
                                 <span class="font-2 text-base text-yellow-500 pr-5 tracking-wide">READ MORE</span>
                                 <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                             </a>
                         </div>
                     </div>
                     <div class="mt-10">
-                        <a href=""
+                        <a href="VR-Times.html"
                             class="text-lg project-btn bg-sky-600 p-2.5 px-20 text-base font-medium tracking-wider text-center"
                             style="width: 150px;">VIEW ALL</a>
                     </div>
