--- a/VR Times blog details.html
+++ b/VR Times blog details.html
@@ -64,8 +64,8 @@
                             </div>
                         </li>
                         <li><a href="VR-Times.html" class="text-yellow-500">AR/VR Times</a></li>
-                        <li><a href="" class="hover:text-yellow-500">Portfolio</a></li>
-                        <li><a href="" class="hover:text-yellow-500">Contact Us</a></li>
+                        <li><a href="Portfolio.html" class="hover:text-yellow-500">Portfolio</a></li>
+                        <li><a href="Contact Us.html" class="hover:text-yellow-500">Contact Us</a></li>
                     </ul>
                 </nav>
 
@@ -103,59 +103,205 @@
                 </div>
             </div>
         </div>
-        <div class="my-32"></div>
-        <div class="gradiant-2 gradiant-5 relative overflow-hidden">
-            <div class="my-28"></div>
-            <!-- COMPANIES -->
-            <div class="company">
-                <div class="container mx-auto px-4 flex items-center py-4 text-xl">
-                    <div class="w-full text-center">
-                        <div class="">
-                            <h3 class="font-2 text-6xl">
-                                TRUSTED BY BIG COMPANIES
-                            </h3>
+        <div class="my-28"></div>
+        <!-- AR/VR Times blog details -->
+        <div class="blog">
+            <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
+                <div class="w-full flex justify-top">
+                    <div class="">
+                        <h2 class="font-2 text-6xl leading-normal">Process of designing a VR industrial<br> training
+                            program</h2>
+                    </div>
+                    <div class="flex mt-5">
+                        <div class="flex bg-yellow-950 inline-block p-2 px-9 h-10 mx-5">
+                            <img src="assets/image/user (1).png" alt="user" class="w-5 h-5 mr-3 font-light">
+                            <span class="tracking-wide">Esther Howard</span>
                         </div>
-                        <div class="flex justify-between items-start mt-20">
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover" src="assets/image/company-1.png" alt="company-1"
-                                        style="height: 236px;">
-                                </div>
-                            </div>
-                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover" src="assets/image/company-2.png" alt="company-2"
-                                        style="height: 236px;">
-                                </div>
-                            </div>
-                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover object-center" src="assets/image/company-3.png"
-                                        alt="company-3" style="height: 236px;">
-                                </div>
-                            </div>
-                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover" src="assets/image/company-4.png" alt="company-4"
-                                        style="height: 236px;">
-                                </div>
-                            </div>
-                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
-                            <div class="flex flex-col items-center">
-                                <div class="w-60 h-60">
-                                    <img class="object-cover" src="assets/image/company-5.png" alt="company-5"
-                                        style="height: 236px;">
-                                </div>
-                            </div>
+                        <div class="bg-yellow-500 inline-block p-2 px-10 h-10">
+                            <span>29 Oct</span>
                         </div>
                     </div>
                 </div>
+                <div class="w-full mt-20">
+                    <img src="assets/image/blog.png" alt="blog" class="object-cover object-center"
+                        style="width: 100%;height: 500px;">
+                    <h3 class="font-2 text-4xl mt-16">Designing an Impactful VR Industrial Training Program:
+                        Step-by-Step</h3>
+                </div>
+                <div class="w-full mt-20 choose-bg h-80 p-20">
+                    <p class="text-2xl text-zinc-400 text-justify leading-relaxed">
+                        Virtual Reality (VR) has proven to be a revolutionary force in various sectors, be it marketing,
+                        education, architecture, or the ever-evolving world of Industrial training. With the immersive
+                        experience it offers, trainees can gain hands-on experience without facing real-world risks. But
+                        how exactly do we design a robust VR industrial training program? Let’s dive deep into the<br>
+                        process.
+                    </p>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">01.</span> Understand the Core Needs and Objectives
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            Before diving headfirst into designing your program, it’s imperative to understand what you
+                            aim to achieve.
+                        </p>
+                        <p class="mt-5 text-zinc-300 font-light tracking-wide">
+                            <span class="text-yellow-500">Pro Tip:</span>
+                            Check out how various industries, such as the aviation, construction, and automotive
+                            sectors, have tailored their training programs to meet their specific needs.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">02.</span> Choose the Right Equipment and Software
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            With a myriad of options available, from the Meta Quest 3 to Sony’s new VR headset,
+                            selecting the right hardware is crucial. Alongside the device, explore software platforms
+                            like CubismVR that can enhance the realism of your training simulations.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">03.</span> Incorporate Real-World Scenarios
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            Basing your training simulations on real-world scenarios is key to ensuring practical
+                            learning. Whether it’s dealing with a fire emergency, as demonstrated in VR fire safety
+                            training, or managing oil & gas operations effectively through VR, the more realistic your
+                            scenarios, the better prepared your trainees will be.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">04.</span> Enhance with AI and Advanced Features
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            Consider integrating cutting-edge AI technology, like the ability to transform text prompts
+                            into 3D worlds. Advanced features can adapt training based on the user’s progress, ensuring
+                            a more tailored experience.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">05.</span> Ensure Safety and Comfort
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            It’s vital to ensure that the participants feel safe and comfortable. Products like [Cyber
+                            Shoes can provide an intuitive and physically engaging way to move within VR environments.
+                            Furthermore, understand the potential challenges of VR, such as motion sickness, and design
+                            your program to minimize these issues.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">06.</span> Collect Feedback and Iterate
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            Post-training, collect feedback from your participants. Platforms like Hiber3D provide tools
+                            for real-time interaction, making feedback collection seamless.
+                        </p>
+                        <p class="mt-8 text-zinc-300 font-light tracking-wide">
+                            Did You Know: The revolutionary interview conducted in the metaverse showcased the power of
+                            VR and its limitless potential in various sectors.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-10">
+                    <img src="assets/image/blog-2.png" alt="blog" class="object-cover object-center"
+                        style="width: 100%;height: 500px;">
+                    <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                        While we’ve outlined the steps to create an effective VR training program, let’s take a deeper
+                        dive into how evolving technologies and various sectors are shaping the future of VR in
+                        industrial training.
+                    </p>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">07.</span> Embrace Multi-disciplinary Training Techniques
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            Training isn’t just about mastering one skill; it’s about blending multiple skills to tackle complex challenges. A classic example is the confluence of virtual reality and medical training, allowing medical students to perform surgeries in a risk-free environment.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">08.</span> Include Gamified Elements
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            Bringing in elements from VR gaming, like those seen in Among Us’s official VR remake, can make training sessions more engaging and interactive. Gamification boosts retention and encourages trainees to approach scenarios more creatively.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">09.</span> Continuous Updates & Evolution
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            With rapid tech advancements, like the generative image dynamics, it’s vital to regularly update your VR modules. This ensures your training materials are always on the cutting edge.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">10.</span> Collaboration in the Virtual Space
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            With platforms like Horizon Workspaces, trainees can collaborate in real-time in a virtual environment, promoting teamwork and collective problem-solving.
+                        </p>
+                        <p class="mt-5 text-zinc-300 font-light tracking-wide">
+                            <span class="text-yellow-500">Industry Spotlight :</span>
+                            The mining industry is leveraging VR for safety and operational training, showcasing how traditional sectors are adopting futuristic technologies.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">11.</span> Dive into the Metaverse
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            The metaverse is the next frontier, and it’s closer than we think. Whether it’s attending conferences, like the Meta Connect 2023, or integrating virtual temples, the metaverse will redefine how we perceive VR training.
+                        </p>
+                    </div>
+                </div>
+                <div class="w-full mt-14">
+                    <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
+                        <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
+                                class=" text-6xl text-yellow-500">12.</span> Measure, Analyze, Improve
+                        </h2>
+                        <p class="mt-10 text-zinc-300 font-light tracking-wide">
+                            Use analytics to measure the effectiveness of your training programs. Understanding where trainees excel or struggle provides data-driven insights for future iterations.
+                        </p>
+                        <p class="mt-5 text-zinc-300 font-light tracking-wide">
+                            In conclusion, the world of VR industrial training is vast and expanding. At twinreality.in, we pride ourselves on being at the forefront of this revolution. From the latest XR news to insights into sectors like the refinery industry and defense, we’ve got it all covered.
+                        </p>
+                        <p class="mt-5 text-zinc-300 font-light tracking-wide">
+                            <span class="text-yellow-500">Ready to embark on your VR journey?</span>
+                            Dive into our vast collection and stay updated with every leap in the world of virtual reality. Let’s shape the future, one virtual step at a time!
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="my-28"></div>
         </div>
+        </div>
+        <div class="my-28"></div>
     </main>
     <footer>
         <div class="footer overflow-hidden">
