--- a/service-metaverse.html
+++ b/service-metaverse.html
@@ -64,8 +64,8 @@
                             </div>
                         </li>
                         <li><a href="VR-Times.html" class="hover:text-yellow-500">AR/VR Times</a></li>
-                        <li><a href="" class="hover:text-yellow-500">Portfolio</a></li>
-                        <li><a href="" class="hover:text-yellow-500">Contact Us</a></li>
+                        <li><a href="Portfolio.html" class="hover:text-yellow-500">Portfolio</a></li>
+                        <li><a href="Contact Us.html" class="hover:text-yellow-500">Contact Us</a></li>
                     </ul>
                 </nav>
 
